Project/Resume/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header {
    background-color: #fffff2;
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 20px;
}

/* .sticky {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
    transition: background-color 0.3s;
} */

nav {
    padding-top: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-top: 1px solid #80A1C1;
}

body {
    background-color: #C0D0DA;
}

ul {
    list-style: none;
    display: flex;
}

li {
    margin-left: 20px;
}

.container {
    max-width: 1000px;
    margin: 20px auto;
    padding: 20px;
    background-color: #fffff2;
}

h1 {
    text-align: left;
    margin-bottom: 20px;
}

h2 {
    text-align: center;
    margin-bottom: 35px;
}

h3 {
    font-weight: bold;
}

h1,
h2 {
    margin-top: 10px;
    font-family: 'Playfair Display', serif;
    color: #678D58;
    font-size: 25px;
}

h1,
h2,
nav a {
    text-transform: uppercase;
}

#altered-text {
    transform: scaleY(1.5);
    letter-spacing: .05em;
}

nav a {
    font-family: 'League Gothic', sans-serif;
    color: #80A1C1;
    text-decoration: none;
    font-weight: 600;
    font-size: 22px;
}

nav a:hover {
    color: #678D58;
    transition: color .5s;
}

p,
label,
article {
    font-weight: lighter;
}

h3,
p, 
label {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    color: #424B54;
    font-style: italic;
}

article {
    font-family: 'Roboto', sans-serif;
    color: #424B54;
    font-size: 18px;
}

.container {
    padding: 30px;
}

.icon-link {
    position: absolute;
    top: 10px;
    right: 20px;
}

.icon-link2 {
    position: absolute;
    top: 10px;
    right: 100px;
}

.icon-link3 {
    position: absolute;
    top: 10px;
    right: 180px;
}

#heading,
#paragraph {
    display: inline;
}

/* Carousel Styling */
.carousel {
    width: 50%;
    margin: auto;
    overflow: hidden; 
    position: relative;
}

.carousel-inner {
    display: flex;
    transition: transform 0.5s ease-in-out;
}

.carousel-item {
    flex: 0 0 100%;
    box-sizing: border-box;
}

img {
    width: 100%;
    height: auto;
    display: block;
}

.prev,
.next {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 25px;
    cursor: pointer;
    background-color: #fffff2;
    color: #424B54;
    border: none;
    padding: 10px;
    outline: none;
}

.prev {
    left: 10px;
}

.next {
    right: 10px;
}

/* Form Styling */
form {
    background-color: #C0D0DA;
    max-width: 400px;
    margin: 20px auto;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

/* This helps with the spacing! */
label {
    display: block;
    margin-bottom: 8px;
}

input,
textarea {
    color: #424B54;
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    width: 100%;
    padding: 10px;
    margin-bottom: 16px;
    font-weight: lighter;
    
}

input[type="button"] {
    background-color: #80A1C1;
    color: #fffff2;
    padding: 10px 15px;
    border: none;
    border-radius: 4px;
}

